Modified format of  output csv

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -273,7 +273,7 @@
     "        # for i in range(2): # for test\n",
     "            search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if material_df['Activity'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
     "            result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
-    "            result_df.to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv', index=None)\n",
+    "            result_df[['GWP100a', 'Location']].to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv', index=None)\n",
     "        \n",
     "        return Created_PS_refProcess\n",
     "\n",
@@ -284,7 +284,7 @@
     "            else:\n",
     "                search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name'] and not self.Process_list_target['not_include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
     "            result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
-    "            result_df.to_csv(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv', index=None)\n",
+    "            result_df[['GWP100a', 'Location']].to_csv(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv', index=None)\n",
     "        \n",
     "        return Created_PS_refProcess"
    ]
@@ -783,13 +783,6 @@
     "# TODO: if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
     "# try to increase max. memory usage in OpenLCA then restart OpenLCA and Jupyter kernel."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
