Collect calculated results in a list for potential future use.

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -199,8 +199,8 @@
     "        \n",
     "        orig_json_len = len(Created_PS_refProcess)\n",
     "\n",
-    "        # for j in range(len(search_process_list)):\n",
-    "        for j in range(2): # for test\n",
+    "        for j in range(len(search_process_list)):\n",
+    "        # for j in range(2): # for test\n",
     "            # Create product systems for selected processes\n",
     "            search_process_ID = search_process_list[j]['id']\n",
     "            search_process_name = search_process_list[j]['name']\n",
@@ -235,8 +235,8 @@
     "        # can be also defined; by default openLCA will take the settings of the reference flow of the product system\n",
     "\n",
     "        calc_result = {}\n",
-    "        # for j in range(len(product_system_df)):\n",
-    "        for j in range(2): # for test\n",
+    "        for j in range(len(product_system_df)):\n",
+    "        # for j in range(2): # for test\n",
     "            key = product_system_names[j]+' | '+product_system_locations[j]+' | '+product_system_ids[j]\n",
     "            print('Calculating '+key)\n",
     "            setup.product_system = client.get(olca.ProductSystem, uid=product_system_ids[j])\n",
@@ -338,13 +338,6 @@
     "# TODO: if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
     "# try to increase max. memory usage in OpenLCA then restart OpenLCA and Jupyter kernel."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
