Improved the input method for list and excel

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -2,20 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<olca.ipc.Client at 0x7fb365e239a0>"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "This script is used for interacting with OpenLCA.\n",
@@ -54,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,103 +75,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>id</th>\n",
-       "      <th>location</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>heat production, heavy fuel oil, at industrial...</td>\n",
-       "      <td>4f582f90-d0ae-3552-be43-70c730e82af0</td>\n",
-       "      <td>RoW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>containerboard production, fluting medium, rec...</td>\n",
-       "      <td>fdffa34a-17fa-3676-9941-0a8a2bc5f5ac</td>\n",
-       "      <td>RoW</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>market for wood chips, dry, measured as dry ma...</td>\n",
-       "      <td>35ca5293-f067-326c-ae45-920013c734c7</td>\n",
-       "      <td>RER</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>treatment of waste glass, unsanitary landfill,...</td>\n",
-       "      <td>ab082ee7-7469-3a1f-8e8f-f71328b9e842</td>\n",
-       "      <td>GLO</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>heat and power co-generation, natural gas, con...</td>\n",
-       "      <td>3c7c0ba3-acd4-3e19-be88-8fff9dc87788</td>\n",
-       "      <td>SE</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                                name  \\\n",
-       "0  heat production, heavy fuel oil, at industrial...   \n",
-       "1  containerboard production, fluting medium, rec...   \n",
-       "2  market for wood chips, dry, measured as dry ma...   \n",
-       "3  treatment of waste glass, unsanitary landfill,...   \n",
-       "4  heat and power co-generation, natural gas, con...   \n",
-       "\n",
-       "                                     id location  \n",
-       "0  4f582f90-d0ae-3552-be43-70c730e82af0      RoW  \n",
-       "1  fdffa34a-17fa-3676-9941-0a8a2bc5f5ac      RoW  \n",
-       "2  35ca5293-f067-326c-ae45-920013c734c7      RER  \n",
-       "3  ab082ee7-7469-3a1f-8e8f-f71328b9e842      GLO  \n",
-       "4  3c7c0ba3-acd4-3e19-be88-8fff9dc87788       SE  "
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Processes_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "class LCA_Calculation():\n",
-    "    def __init__(self, Processes_df, Impact_method, Result_path, Excel_path='', Process_list_target=None):\n",
+    "    def __init__(self, Processes_df, Impact_method, Result_path, Excel_path='', Process_list_target=''):\n",
     "        self.Processes_df = Processes_df\n",
     "        self.Impact_method = Impact_method\n",
     "        self.Result_path = Result_path\n",
@@ -225,7 +132,7 @@
     "        if len(Created_PS_refProcess) > orig_json_len:\n",
     "            Created_PS_refProcess_file = open(\"Created_PS_refProcess.json\", \"w\")\n",
     "            Created_PS_refProcess_file = json.dump(Created_PS_refProcess, Created_PS_refProcess_file)\n",
-    "            Created_PS_refProcess_file.close()\n",
+    "            # Created_PS_refProcess_file.close()\n",
     "\n",
     "        setup = olca.CalculationSetup()\n",
     "        setup.calculation_type = olca.CalculationType.SIMPLE_CALCULATION # TODO: Can choose SIMPLE_CALCULATION, CONTRIBUTION_ANALYSIS, UPSTREAM_ANALYSIS, REGIONALIZED_CALCULATION, MONTE_CARLO_SIMULATION\n",
@@ -265,63 +172,61 @@
     "        return result_df\n",
     "        \n",
     "    def cal_from_excel(self, Created_PS_refProcess={}):\n",
-    "        material_df = pd.read_excel(self.Excel_path, header=None)\n",
-    "        material_df[['Activity', 'Product', 'Cutoff']] = material_df[0].str.split('|', 2, expand=True)\n",
-    "        material_df['Activity'] = material_df['Activity'].str.strip()\n",
-    "\n",
     "        result_collector = []\n",
-    "        for i in range(len(material_df)):\n",
-    "        # for i in range(2): # for test\n",
-    "            search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if material_df['Activity'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
-    "            result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
-    "            result_df[['GWP100a', 'Location']].to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv', index=None)\n",
-    "            result_collector.append(result_df)\n",
-    "        return Created_PS_refProcess, result_collector\n",
+    "        if len(self.Excel_path) > 0:\n",
+    "            material_df = pd.read_excel(self.Excel_path, header=None)\n",
+    "            material_df[['Activity', 'Product', 'Cutoff']] = material_df[0].str.split('|', 2, expand=True)\n",
+    "            material_df['Activity'] = material_df['Activity'].str.strip()\n",
+    "\n",
+    "            for i in range(len(material_df)):\n",
+    "            # for i in range(2): # for test\n",
+    "                search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if material_df['Activity'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
+    "                result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
+    "                result_df[['GWP100a', 'Location']].to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv', index=None)\n",
+    "                result_collector.append(result_df)\n",
+    "            return Created_PS_refProcess, result_collector\n",
+    "        else:\n",
+    "            print('Warning: Excel path is not valid.')\n",
+    "            return Created_PS_refProcess, result_collector\n",
     "\n",
     "    def cal_from_list(self, Created_PS_refProcess={}):\n",
     "        result_collector = []\n",
-    "        for i in range(len(self.Process_list_target['include'])):\n",
-    "            if self.Process_list_target['not_include'][i] == '':\n",
-    "                search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
-    "            else:\n",
-    "                search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name'] and not self.Process_list_target['not_include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
-    "            result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
-    "            result_df[['GWP100a', 'Location']].to_csv(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv', index=None)\n",
-    "            result_collector.append(result_df)\n",
-    "            \n",
-    "        return Created_PS_refProcess, result_collector"
+    "        if len(self.Process_list_target) > 0:\n",
+    "            for i in range(len(self.Process_list_target['include'])):\n",
+    "                if self.Process_list_target['not_include'][i] == '':\n",
+    "                    search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
+    "                else:\n",
+    "                    search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name'] and not self.Process_list_target['not_include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
+    "                result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
+    "                result_df[['GWP100a', 'Location']].to_csv(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv', index=None)\n",
+    "                result_collector.append(result_df)\n",
+    "            return Created_PS_refProcess, result_collector\n",
+    "        else:\n",
+    "            print('Warning: Process list input is not valid.')\n",
+    "            return Created_PS_refProcess, result_collector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Product system of \"electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | CA-SK\" has been created before.\n",
-      "ID: b7893045-6f52-4fc9-91dd-282e86cdf244\n",
-      "Product system of \"electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | NL\" has been created before.\n",
-      "ID: 8b2e009c-2bed-4916-bacd-e6d779373818\n",
-      "Calculating electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | CA-SK | b7893045-6f52-4fc9-91dd-282e86cdf244\n",
-      "Remaining number of processes to be calculated: 1\n",
-      "Calculating electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | NL | 8b2e009c-2bed-4916-bacd-e6d779373818\n",
-      "Remaining number of processes to be calculated: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Impact_method = 'IPCC 2013 no LT' # TODO: change impact method as you need\n",
     "Today = date.today().strftime(\"%d_%b_%Y\") # day, month, year\n",
     "Result_path = Today+'_GWP_100a' # TODO: change result path as you need\n",
     "\n",
-    "# Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, TODO: comment, uncomment and change Excel name (relative path, put the excel file under the same directory as this notebook)\n",
+    "# Excel_path = ''\n",
+    "Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, \n",
+    "# TODO: if no Excel would be input, Excel_path = '', \n",
+    "# otherwise, change Excel name (relative path, put the excel file under the same directory as this notebook)\n",
+    "\n",
+    "# Process_list_target = ''\n",
     "Process_list_target = {\n",
     "    'include': ['electricity, high voltage, production mix'], # key words you want to include\n",
     "    'not_include': [''] # key words you do not want to include\n",
-    "} # optional, TODO: comment, uncomment and change keywords as you need\n",
+    "} # optional, \n",
+    "# TODO: if no list would be input, Process_list_target = ''\n",
     "# if you want to search different activities, put your keywords accordingly in the second, third, ... position \n",
     "# in the list and remember to include an empty element '' when there's no 'not_include' keyword.\n",
     "\n",
@@ -330,10 +235,10 @@
     "# So this file should be varied from machine to machine. If there're no product systems created before in \n",
     "# your OpenLCA database, the json file should contain an empty dictionary.\n",
     "\n",
-    "instance1 = LCA_Calculation(Processes_df, Impact_method, Result_path, Excel_path=None, Process_list_target=Process_list_target) # TODO: change `None` to the real Excel path if input from Excel file\n",
+    "instance1 = LCA_Calculation(Processes_df, Impact_method, Result_path, Excel_path=Excel_path, Process_list_target=Process_list_target) # TODO: change `Excel_path` and `Process+list_target` to `None` accordingly if you only want to \n",
     "\n",
-    "# Created_PS_refProcess, result_collector = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) # TODO: input Excel\n",
-    "Created_PS_refProcess, result_collector = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) # TODO: uncomment if you want to pass a list input list (in fact a dict)\n",
+    "Created_PS_refProcess, result_collector = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) \n",
+    "Created_PS_refProcess, result_collector = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) \n",
     "\n",
     "# TODO: if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
     "# try to increase max. memory usage in OpenLCA then restart OpenLCA and Jupyter kernel."
