Modified documentation of the notebook

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -11,6 +11,7 @@
     "Codes are developed by Ao Chen @ETH-ML.\n",
     "Connect to IPC server in OpenLCA software before running. (Port: 8080)\n",
     "TODO: if you're running this script in your machine for the first time, run `product_system_reader.ipynb` first!\n",
+    "Search for TODO in the notebook to see how to run this notebook as needed. \n",
     "'''\n",
     "\n",
     "from notebook.services.config import ConfigManager\n",
@@ -242,6 +243,78 @@
     "\n",
     "# TODO: if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
     "# try to increase max. memory usage in OpenLCA then restart OpenLCA and Jupyter kernel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_process = client.get(olca.Process, uid='4f582f90-d0ae-3552-be43-70c730e82af0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_exchange = test_process.exchanges[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_exchange.amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_amount = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_amount.append(test_exchange.amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_exchange.amount = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_amount.append(test_exchange.amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_process"
    ]
   }
  ],
