Modified TODO list in notebook

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -137,7 +137,7 @@
     "\n",
     "        setup = olca.CalculationSetup()\n",
     "        setup.calculation_type = olca.CalculationType.SIMPLE_CALCULATION # TODO: Can choose SIMPLE_CALCULATION, CONTRIBUTION_ANALYSIS, UPSTREAM_ANALYSIS, REGIONALIZED_CALCULATION, MONTE_CARLO_SIMULATION\n",
-    "        setup.impact_method = client.find(olca.ImpactMethod, self.Impact_method) # TODO: choose impact method accordingly\n",
+    "        setup.impact_method = client.find(olca.ImpactMethod, self.Impact_method)\n",
     "        setup.amount = 1.0\n",
     "        # amount is the amount of the functional unit (fu) of the system that should be used in the calculation; unit, flow property, etc. of the fu\n",
     "        # can be also defined; by default openLCA will take the settings of the reference flow of the product system\n",
