Added import os

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -23,6 +23,7 @@
     "    'code_cells_only': True,\n",
     "}})\n",
     "\n",
+    "import os\n",
     "import json\n",
     "import olca\n",
     "import uuid\n",
