Write results of each calculated product system right after it's calculated.

--- a/OpenLCA/Ecoinvent_OpenLCA copy.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA copy.ipynb
@@ -25,7 +25,6 @@
     "\n",
     "import os\n",
     "import csv\n",
-    "import copy\n",
     "import json\n",
     "import olca\n",
     "import uuid\n",
@@ -248,8 +247,8 @@
     "Today = date.today().strftime(\"%d_%b_%Y\") # day, month, year\n",
     "Result_path = Today+'_GWP_100a' # TODO: change result path as you need\n",
     "\n",
-    "Excel_path = ''\n",
-    "# Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, \n",
+    "# Excel_path = ''\n",
+    "Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, \n",
     "# TODO: if no Excel would be input, Excel_path = '', \n",
     "# otherwise, change Excel name (relative path, put the excel file under the same directory as this notebook)\n",
     "\n",
@@ -274,6 +273,139 @@
     "\n",
     "# TODO: if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
     "# try to increase max. memory usage in OpenLCA then restart OpenLCA and Jupyter kernel."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_process = client.get(olca.Process, uid='4f582f90-d0ae-3552-be43-70c730e82af0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_exchange = test_process.exchanges[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_input = [exchange for exchange in test_process.exchanges if exchange.input == True]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.00212170676239501"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_input[0].amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'float' object cannot be interpreted as an integer",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/pk/3tmwrq6541738k97y1cxd07w0000gn/T/ipykernel_21873/1757385507.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1.5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0.05\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'float' object cannot be interpreted as an integer"
+     ]
+    }
+   ],
+   "source": [
+    "np.linspace()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_exchange.amount"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_amount = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_amount.append(test_exchange.amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_exchange.amount = 0.5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_amount.append(test_exchange.amount)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_process"
    ]
   }
  ],
