--- a/OpenLCA/product_system_reader.ipynb
+++ b/OpenLCA/product_system_reader.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/plain": [
-       "<olca.ipc.Client at 0x7fbc3b4c4070>"
+       "<olca.ipc.Client at 0x24acc660130>"
       ]
      },
      "execution_count": 1,
@@ -58,132 +58,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "getting 08e38152-897e-4895-8158-54fbda3d4e6d\n",
-      "getting b7893045-6f52-4fc9-91dd-282e86cdf244\n",
-      "getting 8b2e009c-2bed-4916-bacd-e6d779373818\n",
-      "getting b25cb315-448f-44ff-9928-b32a58fea960\n",
-      "getting f900d0c6-a9be-4d3c-a868-7c9675fef049\n",
-      "Process system 16267725-400a-4f3a-ad66-c1ed242cdddd has been created.\n",
-      "Process system 589a8955-9274-4dd1-97e3-a122e0a5c706 has been created.\n",
-      "getting df50a386-b17e-4d5b-94b3-e2b0b9a79a3d\n",
-      "getting 6630733c-fc6f-43c0-9b9f-e52aec706cb8\n",
-      "getting b735cfd8-8076-40f2-be7a-d38e1ed63dcb\n",
-      "getting 19822b22-8ff6-4924-baf9-17a9ce336189\n",
-      "getting 3a326b58-8262-4daa-9e53-0234de92bf3f\n",
-      "getting 6461de51-f716-45c7-a53b-a0e0dc2dca58\n",
-      "getting 92e7376f-8721-4743-947f-2b154868d9b3\n",
-      "getting e43682a9-383b-4a12-a3eb-8b3f30d59c63\n",
-      "getting 1e6ce893-5768-4781-9b93-140f0cdda964\n",
-      "getting 27985b54-b014-44fb-bf0f-857078c7d747\n",
-      "getting 2050d709-8ed7-465d-bcba-b1f90e3e6ad8\n",
-      "getting 37175718-a3d1-4d33-ac4d-3b096d0f6581\n",
-      "getting f4720e93-b30e-4a60-b062-cdd716528bd3\n",
-      "getting 3f262b40-d8a0-43ca-9f54-60d3f972f057\n",
-      "getting ecdfe396-18af-4af8-862d-18d13cba0e87\n",
-      "getting 584a5cad-f8d0-4e03-a44b-d707439714a3\n",
-      "getting 856910b6-4a70-4477-909d-352b8415cf59\n",
-      "getting 0359c3ac-d97d-49da-8f90-fde638354329\n",
-      "getting ee8a1561-d103-4779-af8d-67c7bfcf6bb7\n",
-      "getting eb18b40d-55a7-432f-a2f8-1061d8bee847\n",
-      "getting f8f57573-8e93-4192-8e00-44a2f92e0961\n",
-      "getting 85d58137-3189-49cf-b80d-d38a5ab404c3\n",
-      "getting fa158b29-e703-4962-9f42-ae1c47788a90\n",
-      "getting b07af76b-3547-4c9c-aaa8-5f1a54d6d6cb\n",
-      "getting 396054f1-c675-4321-bd07-b256f4068415\n",
-      "getting 2eb5fae0-21f9-4d44-87d5-3c66df0806a3\n",
-      "getting 06e80da3-7a79-464f-9721-15878c693043\n",
-      "getting 50ed8082-3346-47f3-a805-67aa1f0e80b0\n",
-      "getting f5db4582-6884-4910-8418-1f4a52065f71\n",
-      "getting 5ac497ca-281c-45b0-8d90-a88ca7bb8694\n",
-      "getting a74c6926-1373-4cb1-9d3f-e68b090686ed\n",
-      "getting a2b35d20-8451-47ff-aaf5-bd618bd88213\n",
-      "getting 9badb825-44f2-422a-8b4e-28277f6e1e87\n",
-      "getting efccbea2-5665-46f6-9d95-d2a82db1e768\n",
-      "getting 72b0e5ea-2f65-45d9-a678-6db554d59a62\n",
-      "getting 45b3a5ca-e3ef-4df4-8af7-06126b7e62ec\n",
-      "getting 8934eec2-6daa-4a79-bc2e-1d4f1a702705\n",
-      "getting ce738f34-2a6c-470e-97ae-b52ea63f46c3\n",
-      "getting 6d88dc7c-475b-4256-a49e-71c7b2ac94e8\n",
-      "getting 76d01f8f-0488-43c5-baa0-32e9dbc963ad\n",
-      "getting e39484ae-90fe-4fee-9ca8-48ab20fe3e61\n",
-      "getting df6e6dc1-915c-461b-97d7-5ae383f2ce4c\n",
-      "getting 543fcdc4-2726-4e20-8a02-7db6454fbcc5\n",
-      "getting 6b2ea68a-b118-4403-9678-173303336d8e\n",
-      "getting 6174b6a8-2161-48e5-a59a-f9d77b6f8874\n",
-      "getting 0b828b7a-cd4d-4727-a8f4-c380f1eb421c\n",
-      "getting ee65fc71-ca59-4294-8bd1-3aecea9bee06\n",
-      "getting a2b174fe-7852-4e74-a9b0-ca3e6cdf7aa1\n",
-      "getting 7a7f68fe-2488-44ab-af59-a760e1ba63cf\n",
-      "getting a13bea17-2000-438c-903b-e7b9c46eaf5a\n",
-      "getting ab7e6be3-32fd-4f1b-892a-6ac1feb36741\n",
-      "getting 2cb56cdd-81fb-47ef-9e37-bd47e5df0d95\n",
-      "getting 4419cfe4-563c-4317-8397-c925fcc1e2d1\n",
-      "getting e69a8986-310e-431f-ac15-aa0e7184d937\n",
-      "getting 7cf4d12e-4c8b-4df5-b819-26fd76dc4d40\n",
-      "getting 760ff859-2628-442b-a04b-c8e8b68374e5\n",
-      "getting f91a6e08-4485-4de2-aac5-ca82b2b25779\n",
-      "getting 62a1e5de-6c6d-44ac-916e-6641df471765\n",
-      "getting 20378d43-b0f9-4074-a44b-886bacad42e7\n",
-      "getting 3542a9ba-1eff-449b-b312-4241a81da1c8\n",
-      "getting 56fe120d-b6a6-4c03-8aa5-24ebc26d6207\n",
-      "getting 29b0fa14-b16c-4352-be7f-441485a46760\n",
-      "getting 72a9bd5c-7e6a-4b7f-8d1d-4e26b0691e07\n",
-      "getting aa5029ef-ae5b-41f3-8eea-c3f4b90b473e\n",
-      "getting 0b2e78cf-6d1f-4159-a453-963255c99583\n",
-      "getting 5c2257a2-c1ca-42a6-8311-a4f401f95ecc\n",
-      "getting a80a9c9b-9416-42e4-9c55-f3ba8615eb69\n",
-      "getting 7f15b16a-575a-4567-95ef-65d4662bb277\n",
-      "getting fded1b11-9acf-4b72-a9c2-b33cb70d3c1a\n",
-      "getting 5c96e9b5-b7dd-4cdf-a29c-93287453a0a2\n",
-      "getting 66cd7d13-d09f-45a5-b8f7-f9ff6bf30375\n",
-      "getting 86f8bc9f-7208-4f96-9fc2-e570f067fe13\n",
-      "getting 61f35060-3b68-4048-8b8b-dd149912ddae\n",
-      "getting c31d8478-edf4-4e63-9993-5f0ca4de2896\n",
-      "getting bae941ed-2534-447a-8112-46c4520bd4db\n",
-      "getting 906dd93d-0210-4541-9325-993307d8aafe\n",
-      "getting 01efa7b6-69fa-4f6d-98dc-a1ed28d0908a\n",
-      "getting 9dae1b71-b43e-43e8-86f2-f4a9812037ce\n",
-      "getting fbc8f398-a9dd-4071-84ff-8c7f3794ed79\n",
-      "getting 140dc4d9-6cbb-4b77-9f2c-b9ac2bd5079d\n",
-      "getting 059af72b-8ce6-4da0-963b-03e75f2375f7\n",
-      "getting 715d2d31-ff81-48fb-8d5d-fb1629878ef6\n",
-      "getting 80096641-63c3-4a14-be26-f27e69986ead\n",
-      "getting c865e21c-b149-4b72-a892-1f14d8eefe37\n",
-      "getting 325cbf95-03f1-4717-9de9-16bf7b3fac0e\n",
-      "getting 2c05dae2-1cad-4075-ba9c-4680cb8500e6\n",
-      "getting 194e1e8e-defb-4b1e-87a8-dfb417fd48a6\n",
-      "getting 168a9887-127a-428f-b299-9993d04d18a5\n",
-      "getting 0cc423d1-918d-41c4-853b-79a542b607aa\n",
-      "getting 4709321e-7c41-4aae-9c6c-60e808c827c5\n",
-      "getting 9584c100-61d0-4302-9de8-d640169425a4\n",
-      "getting 7f6ebf48-3411-4021-aac1-5036ac6776f6\n",
-      "getting a8fb016e-99a5-4e55-9677-1e9664fbb8fa\n",
-      "getting 6cf72f29-36a9-43d0-98a0-fc0583c0dd87\n",
-      "getting fc4b7628-fb2a-4a97-b177-f11513c2ed83\n",
-      "getting cb5975eb-71e9-40e7-8ecd-b7400112b5da\n",
-      "getting 7ce8affe-60a9-479f-a59d-19c3855ca7c1\n",
-      "getting 2bb67112-6fab-47bf-ba0c-7e408da59115\n",
-      "getting d40e301b-4667-4670-aabf-8b3d9ae4365d\n",
-      "getting d1bf635d-55c1-49fa-bd64-686b6640865b\n",
-      "getting 812b9c0b-6fd4-46a8-9e22-90c14b18df15\n",
-      "getting c8d60938-77b9-4581-a7c3-e0766240ed33\n",
-      "getting f5d608f5-5cda-4e4c-92c1-8c2de07dee5d\n",
-      "getting 4c309cee-6b45-4ad1-8857-d5b73e643838\n",
-      "getting 07bf972b-f936-493d-b191-782010094184\n",
-      "getting 5b0899f8-c598-4a7a-b264-8cc833f75336\n",
-      "getting 4bf76b35-f867-4f10-8ba9-bff38a3a6303\n",
-      "getting 8dc82ca5-6c49-4df8-912a-d6a5ec9936b8\n",
-      "getting b132839b-a6cf-4375-94db-66c877946cf3\n",
-      "getting cd819970-6e8c-4713-ab4a-8b8b240e36cb\n",
-      "getting 8b55a7d4-3565-40b9-bea6-221783bb1413\n",
-      "getting 04622caa-7cdf-4ba1-8bd9-4dce9d2e181b\n"
+      "getting 6b159a56-1dfa-4eb5-beac-37774ed0a2bf\n",
+      "getting 2ac672c5-3e67-4352-a234-e0fa26dc8fe8\n",
+      "getting 494e5c07-8390-489f-b9a9-6f936df8f919\n",
+      "getting 09b4ba3a-e3f3-423c-b572-a06312c4fad1\n",
+      "getting 70b37d21-2b10-4798-9a6d-77dcd463344f\n",
+      "getting 1cc9cdc9-e395-4811-9d59-4360792b1d17\n",
+      "getting 28b9b0fc-ee10-40a6-bf5f-78c9e5f29283\n",
+      "getting ef791bae-b9c9-4668-bb88-8649e1fb0c8d\n",
+      "getting e066608c-f981-4c7a-89a4-1933e7c7b59d\n",
+      "getting e383f3ef-ae6d-4ae7-a1eb-e03973d242ed\n",
+      "getting f4eb8890-125a-4a95-a786-b4ad3d4e96a7\n",
+      "getting 71e0ec7e-249a-445c-b3d9-a0a3f0a8f3da\n",
+      "getting 2da3b581-60dd-4520-ad48-8e785899ad0c\n",
+      "getting f927f25e-4b36-4cfd-8d71-87e585c354fa\n",
+      "getting 614a3671-e22c-4e74-bb9d-48d45372fa53\n",
+      "getting 5153b63c-39dd-403b-a691-48f35b59070a\n",
+      "getting 399a3792-2da7-4d28-83c5-445bc25abee3\n",
+      "getting b5589308-9e0c-4bdb-94b6-dab80d150832\n",
+      "getting 42e61f18-d7a3-487d-899d-7ccb3c8c75f8\n",
+      "getting c5ca6815-bbd1-4f00-8e84-891286181c13\n",
+      "getting 2905cce7-8795-4767-908a-265b9bf7918a\n",
+      "getting 3d2286b5-4de6-46c3-82e8-9db81b9a9926\n",
+      "getting 0f6ad7bc-01af-434d-b343-00f638076152\n",
+      "getting 54e395e6-ff7a-43ae-a30f-78be1dab958d\n",
+      "getting 86db570c-d5b9-4dfe-a0a8-36abfc1032e8\n",
+      "getting b5a01bf9-354f-48be-8f74-b7f53b12ddde\n",
+      "getting cb223d3a-3bf8-4a19-b652-bb82fa448d5e\n",
+      "getting 6c1d1d43-661b-48c3-bd5f-48d272e9c8e3\n",
+      "getting c77b37fc-1c01-4bc3-8ad0-4340966be356\n",
+      "getting 6ae5cef7-6c66-415f-ab0b-0acb85a092ac\n",
+      "getting c5171703-cdd3-47e8-9266-64cae848a544\n",
+      "getting 14e00b70-f980-41d2-a60b-a5d58768eab6\n",
+      "getting b25fbeb0-7d0f-4151-a160-d29fc7d38337\n",
+      "getting 88fb0646-24fc-42ff-8744-afac1c2e69cb\n",
+      "getting 78895f9e-bd66-4d8e-ad22-5dc30c653210\n",
+      "getting 056df897-7f83-445e-bb14-ab68e05bd99b\n",
+      "getting 42d46986-a7ac-4911-80ae-29094a3eb5cb\n",
+      "getting 9007a74e-63d1-4413-885c-89bd0d8d94d9\n",
+      "getting fd8d05c9-5335-428c-857e-46452ba61e91\n",
+      "getting b29f0950-c288-4afa-887b-2c08ef8649b6\n",
+      "getting a16b8f1a-a90c-4bbb-a081-1e67b698f6f0\n",
+      "getting 47cfb9da-fbf5-43f0-a0de-2edaf00d8565\n",
+      "getting eba00366-6820-4321-b44e-98baf29b90e2\n",
+      "getting b6e38d99-0415-4a15-a62a-c50bb9dea3a3\n",
+      "getting a3eef604-43ce-4e8f-bd54-6f56d7aae479\n",
+      "getting 7a223b98-fa4a-42eb-a79b-60fa6380490f\n",
+      "getting fffee35c-9e60-4f2a-a404-09e3f244d039\n",
+      "getting 4ce2ea53-6420-4dd8-bcef-64cbcf6d25ec\n",
+      "getting 2f496d15-6499-4909-995d-8f246a055c0e\n",
+      "getting 1541bd27-3675-4ca8-94f9-df3a655bc89c\n",
+      "getting d74bff4a-d523-4552-95c3-91bfff6a7587\n",
+      "getting b5a00e3d-9784-4dce-ab03-a2448c8a74cd\n",
+      "getting 72d0857d-e408-42c8-b86a-7737aa81985c\n",
+      "getting 8f709b1a-173f-4b9a-b295-9eb9621c6760\n",
+      "getting 2e02b6d7-4e6e-4f4a-86a9-9fceb3e397d6\n",
+      "getting 55dbb30e-08e7-468c-98bf-e75ed06835cc\n",
+      "getting bb05484f-1129-452f-b988-2448f4567132\n",
+      "getting e215b638-5117-44f7-ac29-ff23f2c1da3b\n",
+      "getting 52881749-f01e-4cff-829c-4c0fc3e284ac\n",
+      "getting a82a2d4d-1020-4b6b-921b-e75199766d5b\n",
+      "getting 113c3753-8a7d-4428-b556-da7397d710dd\n",
+      "getting 8c5bea79-48b1-4ba6-9302-e563d025dd7a\n",
+      "getting 161a1496-d4d5-4022-a4de-1027e7f7d038\n",
+      "getting a9595ea6-6e52-4b0b-9543-a311fbe06d0f\n",
+      "getting 0e1b44b6-eaaf-43d6-a7d1-2dae249cf2d9\n",
+      "getting 4a6147b6-b0a1-4f36-9c7d-12d3c8bfeb65\n",
+      "getting 4dc34e82-38f0-4f07-be1d-b4d776b2d625\n",
+      "getting 1e613445-c71a-40e6-9301-6c18c28e0764\n",
+      "getting e988fd93-14ef-4d90-baaa-354d5892d187\n",
+      "getting 2da07927-c45c-4b05-bb01-b98a5c751d7e\n",
+      "getting 4f2aef13-26de-48b4-a660-3139333073d9\n",
+      "getting 07d1623f-eb21-443d-b22c-12aaef0aac65\n",
+      "getting 95b986eb-d78f-4f53-ba1c-0a00d1f3eb6a\n",
+      "getting ab31afa7-1902-417b-b325-b0345442b2a8\n",
+      "getting 2dc17e59-4d90-4f66-9a00-443b9ccfe007\n",
+      "getting 9bc14947-1452-4504-8c53-3a005a4abcdb\n",
+      "getting 069fbf39-720b-433f-8d02-7d6a7d9ab4a2\n",
+      "getting 20b8e9e5-e475-49ae-ac6f-85622566f9d9\n",
+      "getting 1ac2ab46-3a35-4eea-bb04-2229dd11738c\n",
+      "getting 22736017-c511-48b8-aa15-21afb0878110\n",
+      "getting a528e1ed-3466-4a79-afbe-a71e937b5931\n",
+      "getting 249123a9-994f-4a77-9db7-49eb2d28e944\n",
+      "getting e6a51a46-a10b-484a-b96b-4ee609d2c04f\n",
+      "getting fcd863e6-66b4-48af-b8eb-0809fd22cf25\n",
+      "getting 0c636aca-fdb6-4f7a-8318-7760bcdeced0\n",
+      "getting d6681605-a74a-4e71-a40a-c9a722510e06\n",
+      "getting db4d4b59-c7ac-4f16-aca7-ac0986959e06\n"
      ]
     }
    ],
