Renamed files. Drafted the function if there's an error during calculation which is to be tested.

--- a/OpenLCA/Ecoinvent_SA_OpenLCA_v1.ipynb
+++ b/OpenLCA/Ecoinvent_SA_OpenLCA_v1.ipynb
@@ -964,280 +964,15 @@
     }
    ],
    "source": [
-    "process_id = \"54aa798a-0cff-4f8d-8a2b-dc6cb356af3d\"\n",
-    "start_point=0.5\n",
-    "end_point=1.5\n",
-    "step_size=0.05\n",
-    "Impact_method = 'ei -  IPCC 2013'\n",
+    "process_id = \"54aa798a-0cff-4f8d-8a2b-dc6cb356af3d\" #TODO: change process id as needed. \n",
+    "start_point=0.5 # TODO: change start point of SA as needed\n",
+    "end_point=1.5 # TODO: change end point of SA as needed\n",
+    "step_size=0.05 # TODO: change step size of SA as needed\n",
+    "Impact_method = 'ei -  IPCC 2013' # TODO: change impact method as needed. \n",
+    "# TODO: Check out the impact method's name in OpenLCA to ensure it's right.\n",
     "Today = date.today().strftime(\"%d_%b_%Y\") # day, month, year\n",
     "Result_path = Today+'_SA' # TODO: change result path as you need\n",
     "SA(Result_path=Result_path, process_id=process_id, start_point=start_point, end_point=end_point, step_size=step_size, Impact_method=Impact_method)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\"54aa798a-0cff-4f8d-8a2b-dc6cb356af3d\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Processes_df.iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Processes_df[Processes_df['id']=='4f582f90-d0ae-3552-be43-70c730e82af0'].iloc[0]['name'].split(' | ')[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_process = client.get(olca.Process, uid=\"54aa798a-0cff-4f8d-8a2b-dc6cb356af3d\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_exchange = test_process.exchanges[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_input = [exchange for exchange in test_process.exchanges if exchange.input == True]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'electricity production, solar thermal parabolic trough, 50 MW | electricity, high voltage | Cutoff, U'"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_input[0].default_provider.name"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'ok'"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test_input[0].amount = 0.1277944082062294\n",
-    "test_input[1].amount = 0.568810584664069\n",
-    "test_input[2].amount = 0.23235346946587163\n",
-    "test_input[3].amount = 0.00706338597306347\n",
-    "test_input[4].amount = 5.8781711690401E-6\n",
-    "client.update(test_process)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 67,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "electricity production, oil | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.00706338597306347\n",
-      "electricity production, solar thermal parabolic trough, 50 MW | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.23235346946587163\n",
-      "electricity production, natural gas, conventional power plant | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.1277944082062294\n",
-      "electricity production, natural gas, combined cycle power plant | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.568810584664069\n",
-      "electricity production, wind, <1MW turbine, onshore | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "5.8781711690401e-06\n"
-     ]
-    }
-   ],
-   "source": [
-    "for input in test_input:\n",
-    "    print(input.default_provider.name)\n",
-    "    print(input.default_provider.location)\n",
-    "    print(input.amount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "electricity production, solar thermal parabolic trough, 50 MW | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.23235346946587163\n",
-      "electricity production, oil | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.00706338597306347\n",
-      "electricity production, natural gas, combined cycle power plant | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.568810584664069\n",
-      "electricity production, wind, <1MW turbine, onshore | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "5.8781711690401e-06\n",
-      "electricity production, natural gas, conventional power plant | electricity, high voltage | Cutoff, U\n",
-      "RoW\n",
-      "0.1277944082062294\n"
-     ]
-    }
-   ],
-   "source": [
-    "for input in test_input:\n",
-    "    print(input.default_provider.name)\n",
-    "    print(input.default_provider.location)\n",
-    "    print(input.amount)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_input[2].amount = 2.09125441243551e-06\n",
-    "client.update(test_process)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "initial_value = copy.deepcopy(test_input[0].amount)\n",
-    "test_amount_range = test_input[0].amount*np.arange(0.5, 1.55, 0.05)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for input in test_input:\n",
-    "    print(input.default_provider.location)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print('input flow: '+test_input[0].default_provider.name)\n",
-    "print('initial amount:' + str(initial_value))\n",
-    "for i in range(len(test_amount_range)):\n",
-    "    test_input[0].amount = test_amount_range[i]\n",
-    "    print('new amount: '+str(test_amount_range[i]))\n",
-    "    \n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_exchange.amount"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_amount = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_amount.append(test_exchange.amount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_exchange.amount = 0.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_amount.append(test_exchange.amount)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test_process"
    ]
   }
  ],
