Debugged SA_range_key

--- a/OpenLCA/Ecoinvent_SA_OpenLCA_v1_1.ipynb
+++ b/OpenLCA/Ecoinvent_SA_OpenLCA_v1_1.ipynb
@@ -242,6 +242,7 @@
     "\n",
     "            else:\n",
     "                test_input[j].default_provider = 'No Default Provider'\n",
+    "                SArange_key = test_input[j].default_provider+' | '+str(start_point)+' | '+str(end_point)+' | '+str(step_size)\n",
     "                print('input flow: '+test_input[j].default_provider)\n",
     "\n",
     "            if SArange_key not in SA_dict[process_key].keys():\n",
